fixed alignment of featured image preview

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -432,7 +432,7 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   right: 0;
 }
 .heroCurve3Container {
-  width: 100vw;
+  width: 100%;
 }
 @media (max-width: 1536px) {
   .heroCurve2Container {
